Make 'fresca' piece set available in app.

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -531,6 +531,39 @@
     &.black
       background-image url('../../images/pieces/maestro/bK.svg')
 
+/* Fresca */
+.fresca piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/fresca/wP.svg')
+    &.black
+      background-image url('../../images/pieces/fresca/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/fresca/wB.svg')
+    &.black
+      background-image url('../../images/pieces/fresca/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/fresca/wN.svg')
+    &.black
+      background-image url('../../images/pieces/fresca/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/fresca/wR.svg')
+    &.black
+      background-image url('../../images/pieces/fresca/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/fresca/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/fresca/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/fresca/wK.svg')
+    &.black
+      background-image url('../../images/pieces/fresca/bK.svg')
+
 /* Cardinal */
 .cardinal piece
   &.pawn
