--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -240,6 +240,11 @@
       background-image url('../../images/pieces/maestro/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/maestro/wP.svg'),url('../../images/pieces/maestro/wN.svg'),url('../../images/pieces/maestro/wB.svg'),url('../../images/pieces/maestro/wR.svg'),url('../../images/pieces/maestro/wQ.svg'),url('../../images/pieces/maestro/wK.svg')
+  &.fresca
+    > label
+      background-image url('../../images/pieces/fresca/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/fresca/wP.svg'),url('../../images/pieces/fresca/wN.svg'),url('../../images/pieces/fresca/wB.svg'),url('../../images/pieces/fresca/wR.svg'),url('../../images/pieces/fresca/wQ.svg'),url('../../images/pieces/fresca/wK.svg')
   &.cardinal
     > label
       background-image url('../../images/pieces/cardinal/wN.svg')
