Fix training offline menu

--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -109,6 +109,10 @@
 
 .trainingMenuContent
   padding 10px
+  > .signin
+    display flex
+    justify-content center
+    padding-top 1em
 
 .trainingRatingHeader
   padding 10px
