More work on practice

--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -288,6 +288,15 @@ comment
   flex-flow column nowrap
   &.minimized
     height 28px
+  .icon
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin-right: 10px;
+    font-size: 50px;
+    font-size: 64px;
+    line-height: 64px;
+    text-align: center;
   > .titleWrapper
     flex 0 0 28px
     background-color darkBlue
