--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -344,7 +344,6 @@ comment
     opacity: 0.8;
     width: 100%;
     height: 4px;
-    background: darken(textDarkBg, 30%)
   }
   .progress div {
     background: green
@@ -478,11 +477,26 @@ comment
     text-shadow: 0 1px 0 #FFF;
     color: #848484;
 
+  .analyse-training_box.box
+    background #fff
+
   .analyse-practice_box
     > .comment
       background #f7f6f5
+    .progress div {
+      background: lighten(textLightBg, 30%)
+    }
+
 
 .view-container.transp
+
+  .analyse-training_box.box
+    background-color #f5f5f5
+    color textDarkGray
+
+  .analyse-practice_box
+    > .comment
+      background darken(#f5f5f5, 10%)
 
   .analyse-fixedBar
     background-color transpBlack02
