Update Lichess font to pick up new bullet and ultrabullet icons

--- a/src/styl/lichess-font.styl
+++ b/src/styl/lichess-font.styl
@@ -2,7 +2,8 @@
 
 @font-face {
   font-family: "lichess";
-  src: url("../../fonts/lichess.ttf") format("truetype");
+  src: url("../../fonts/lichess.woff2") format("woff2"),
+	url("../../fonts/lichess.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
