Just use woff2 format

--- a/src/styl/lichess-font.styl
+++ b/src/styl/lichess-font.styl
@@ -2,8 +2,7 @@
 
 @font-face {
   font-family: "lichess";
-  src: url("../../fonts/lichess.woff2") format("woff2"),
-	url("../../fonts/lichess.woff") format("woff");
+  src: url("../../fonts/lichess.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
