--- a/src/styl/offline-game.styl
+++ b/src/styl/offline-game.styl
@@ -3,10 +3,9 @@
   margin-left 10px
 
 .offline_actions
-  .claimDraw
-    button.draw-yes:before
-      display inline-block
-      transform rotate(-90deg)
+  button.draw-yes
+    > span
+      margin-right 5px
   .opponentSelector
     .select_input
       margin-top 0
