Add governor set
Closes #1365

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -663,6 +663,39 @@
     &.black
       background-image url('../../images/pieces/staunty/bK.svg')
 
+/* Governor */
+.governor piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/governor/wP.svg')
+    &.black
+      background-image url('../../images/pieces/governor/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/governor/wB.svg')
+    &.black
+      background-image url('../../images/pieces/governor/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/governor/wN.svg')
+    &.black
+      background-image url('../../images/pieces/governor/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/governor/wR.svg')
+    &.black
+      background-image url('../../images/pieces/governor/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/governor/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/governor/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/governor/wK.svg')
+    &.black
+      background-image url('../../images/pieces/governor/bK.svg')
+
 /* symmetric */
 .symmetric piece
   &.pawn
