--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -260,6 +260,11 @@
       background-image url('../../images/pieces/staunty/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/staunty/wP.svg'),url('../../images/pieces/staunty/wN.svg'),url('../../images/pieces/staunty/wB.svg'),url('../../images/pieces/staunty/wR.svg'),url('../../images/pieces/staunty/wQ.svg'),url('../../images/pieces/staunty/wK.svg')
+  &.governor
+    > label
+      background-image url('../../images/pieces/governor/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/governor/wP.svg'),url('../../images/pieces/governor/wN.svg'),url('../../images/pieces/governor/wB.svg'),url('../../images/pieces/governor/wR.svg'),url('../../images/pieces/governor/wQ.svg'),url('../../images/pieces/governor/wK.svg')
   &.symmetric
     > label
       background-image url('../../images/pieces/symmetric/wN.svg')
