--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -56,8 +56,6 @@
 
 .analyse-tabContentTitle
   font-family 'Roboto'
-  font-size: 1em;
-  text-transform: uppercase;
   text-align: center;
   white-space: nowrap;
   margin: 1.5em 0 3px 0;
@@ -281,7 +279,7 @@ comment
   flex-flow column nowrap
   justify-content flex-start
   align-items center
-  padding 2em 1em
+  padding 2vmin
   width 100%
   font-size 0.9rem
   > .gameInfos
