Remove training score, add space to vote arrows

--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -151,15 +151,18 @@
   flex-flow row nowrap
   align-items center
   margin-left 1em
+  align-self stretch
   > .buttons
     margin-left 10px
     display flex
     flex-flow column nowrap
+    height 100%
+    justify-content space-around
     > span
       margin 0
       padding 0
       color white
-      font-size 40px
+      font-size 50px
       line-height 25px
       &.voted
         color gold
