Tweak puzzle rating size

--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -115,8 +115,9 @@
     padding-top 1em
 
 .trainingRatingHeader
-  padding 10px
-  margin-bottom 10px
+  padding 1em
+  > strong
+    font-size 1.5em
 
 .trainingUserInfos.landscape
   flex 0 0 auto
