Add california piece set

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -794,3 +794,36 @@
       background-image url('../../images/pieces/pixel/wK.svg')
     &.black
       background-image url('../../images/pieces/pixel/bK.svg')
+
+/* California */
+.california piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/california/wP.svg')
+    &.black
+      background-image url('../../images/pieces/california/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/california/wB.svg')
+    &.black
+      background-image url('../../images/pieces/california/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/california/wN.svg')
+    &.black
+      background-image url('../../images/pieces/california/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/california/wR.svg')
+    &.black
+      background-image url('../../images/pieces/california/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/california/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/california/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/california/wK.svg')
+    &.black
+      background-image url('../../images/pieces/california/bK.svg')
