--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -262,3 +262,7 @@
     background-image url('../../images/pieces/pixel/wN.svg')
     @media only screen and (min-width 600px)
       background-image url('../../images/pieces/pixel/wP.svg'),url('../../images/pieces/pixel/wN.svg'),url('../../images/pieces/pixel/wB.svg'),url('../../images/pieces/pixel/wR.svg'),url('../../images/pieces/pixel/wQ.svg'),url('../../images/pieces/pixel/wK.svg')
+  &.california
+    background-image url('../../images/pieces/california/wN.svg')
+    @media only screen and (min-width 600px)
+      background-image url('../../images/pieces/california/wP.svg'),url('../../images/pieces/california/wN.svg'),url('../../images/pieces/california/wB.svg'),url('../../images/pieces/california/wR.svg'),url('../../images/pieces/california/wQ.svg'),url('../../images/pieces/california/wK.svg')
