--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -17,6 +17,10 @@
   flex 1 1 auto
   display flex
 
+.analyse-tabsContent
+  &.withTrainingBox
+    padding-bottom 28px
+
 .analyse-boardWrapper
   flex-grow 0
   flex-shrink 0
@@ -509,6 +513,9 @@ comment
 
   .analyse-training_box.box
     background #fff
+    > .titleWrapper
+      background-color blue
+      color #fff
 
   .analyse-practice_box
     > .comment
@@ -524,6 +531,8 @@ comment
   .analyse-training_box.box
     background-color #f5f5f5
     color textDarkGray
+    > .titleWrapper
+      background-color rgba(#000, 0.9)
 
   .analyse-practice_box
     > .comment
