Better editor fen validation
Fixes #1528

--- a/src/styl/editor.styl
+++ b/src/styl/editor.styl
@@ -54,7 +54,7 @@
     + .select_input
       margin-top 5px
     select
-      padding-left 80px
+      padding-left 10px
 
 .editor-castling
   margin 10px auto 0
@@ -64,7 +64,7 @@
     font-weight bold
     margin-bottom 5px
   .form-multipleChoice
-    margin-bottom 3px
+    margin-bottom 0.5em
     color textGray
 
 .continueFromHere
