--- a/src/styl/form.styl
+++ b/src/styl/form.styl
@@ -223,12 +223,14 @@ button.fat
     transition: background 0.13s;
     border-right: 1px solid modalDarkBorder
     background: linear-gradient(to bottom, #3c3934, #33312e 100%)
+    opacity 0.6
     &:first-child
       border-radius: 3px 0 0 3px;
     &:last-child
       border-radius: 0 3px 3px 0;
       border-right 0
     &.selected
+      opacity 1
       font-weight bold
       background #4d4d4d
       color: #e3e3e3
