Use chessops to validate fen of challenge

--- a/src/styl/new-game.styl
+++ b/src/styl/new-game.styl
@@ -25,11 +25,16 @@
   justify-content center
   align-items center
   margin-top 10px
-  input[type=text]
-    width 90%
-    margin 10px auto
-    border 1px solid borderLightGray
-    padding 2px 4px
+  > .setupPositionInput
+    width 100%
+    display flex
+    justify-content center
+    align-items center
+    input[type=text]
+      width 75%
+      margin 10px auto
+      border 1px solid borderLightGray
+      padding 2px 4px
   .setupFenError
     color red
 
