Add horsey piece set

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -827,3 +827,36 @@
       background-image url('../../images/pieces/california/wK.svg')
     &.black
       background-image url('../../images/pieces/california/bK.svg')
+
+/* Horsey */
+.horsey piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/horsey/wP.svg')
+    &.black
+      background-image url('../../images/pieces/horsey/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/horsey/wB.svg')
+    &.black
+      background-image url('../../images/pieces/horsey/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/horsey/wN.svg')
+    &.black
+      background-image url('../../images/pieces/horsey/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/horsey/wR.svg')
+    &.black
+      background-image url('../../images/pieces/horsey/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/horsey/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/horsey/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/horsey/wK.svg')
+    &.black
+      background-image url('../../images/pieces/horsey/bK.svg')
