--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -266,3 +266,7 @@
     background-image url('../../images/pieces/california/wN.svg')
     @media only screen and (min-width 600px)
       background-image url('../../images/pieces/california/wP.svg'),url('../../images/pieces/california/wN.svg'),url('../../images/pieces/california/wB.svg'),url('../../images/pieces/california/wR.svg'),url('../../images/pieces/california/wQ.svg'),url('../../images/pieces/california/wK.svg')
+  &.horsey
+    background-image url('../../images/pieces/horsey/wN.svg')
+    @media only screen and (min-width 600px)
+      background-image url('../../images/pieces/horsey/wP.svg'),url('../../images/pieces/horsey/wN.svg'),url('../../images/pieces/horsey/wB.svg'),url('../../images/pieces/horsey/wR.svg'),url('../../images/pieces/horsey/wQ.svg'),url('../../images/pieces/horsey/wK.svg')
