Add horsey board

--- a/src/styl/chessground-board.styl
+++ b/src/styl/chessground-board.styl
@@ -532,6 +532,28 @@
       color rgba(#c1c18e, 1)
     &.coord-odd
       color rgba(#ececec, 1)
+.horsey.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#f8ebdb, 1)
+    &.coord-even
+      color rgba(#8e6548, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#f8ebdb, 1)
+    &.coord-odd
+      color rgba(#8e6548, 1)
+.horsey.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#8e6548, 1)
+    &.coord-even
+      color rgba(#f8ebdb, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#8e6548, 1)
+    &.coord-odd
+      color rgba(#f8ebdb, 1)
 
 .kingOfTheHill > .cg-board:before
   width: 25%;
