--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -157,6 +157,8 @@
   &.ic
     background-image url('../../images/board/svg/ic.svg')
     background-size 256px
+  &.horsey
+    background-image url('../../images/board/horsey.thumbnail.jpg')
 
 .list_item.piece_theme
   line-height 60px
