--- a/src/styl/chessground-board.styl
+++ b/src/styl/chessground-board.styl
@@ -1,7 +1,7 @@
 // standard 2D boards
-.brown > .cg-board
+.board-brown > .cg-board
   background-image url('../../images/board/svg/brown.svg')
-.brown.orientation-white
+.board-brown.orientation-white
   > .files > li-coord
     &.coord-even
       color rgba(#b58863, 1)
@@ -12,7 +12,7 @@
       color rgba(#f0d9b5, 1)
     &.coord-odd
       color rgba(#b58863, 1)
-.brown.orientation-black
+.board-brown.orientation-black
   > .files > li-coord
     &.coord-even
       color rgba(#f0d9b5, 1)
@@ -23,9 +23,9 @@
       color rgba(#b58863, 1)
     &.coord-odd
       color rgba(#f0d9b5, 1)
-.blue > .cg-board
+.board-blue > .cg-board
   background-image url('../../images/board/svg/blue.svg')
-.blue.orientation-white
+.board-blue.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#dee3e6, 1)
@@ -36,7 +36,7 @@
       color rgba(#dee3e6, 1)
     &.coord-odd
       color rgba(#8ca2ad, 1)
-.blue.orientation-black
+.board-blue.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#8ca2ad, 1)
@@ -47,9 +47,9 @@
       color rgba(#8ca2ad, 1)
     &.coord-odd
       color rgba(#dee3e6, 1)
-.green > .cg-board
+.board-green > .cg-board
   background-image url('../../images/board/svg/green.svg')
-.green.orientation-white
+.board-green.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#ffffdd, 1)
@@ -60,7 +60,7 @@
       color rgba(#ffffdd, 1)
     &.coord-odd
       color rgba(#86a666, 1)
-.green.orientation-black
+.board-green.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#86a666, 1)
@@ -71,9 +71,9 @@
       color rgba(#86a666, 1)
     &.coord-odd
       color rgba(#ffffdd, 1)
-.purple > .cg-board
+.board-purple > .cg-board
   background-image url('../../images/board/svg/purple.svg')
-.purple.orientation-white
+.board-purple.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#9f90b0, 1)
@@ -84,7 +84,7 @@
       color rgba(#9f90b0, 1)
     &.coord-odd
       color rgba(#7d4a8d, 1)
-.purple.orientation-black
+.board-purple.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#7d4a8d, 1)
@@ -95,7 +95,7 @@
       color rgba(#7d4a8d, 1)
     &.coord-odd
       color rgba(#9f90b0, 1)
-.wood.orientation-white
+.board-wood.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#d29d51, 1)
@@ -106,7 +106,7 @@
       color rgba(#d29d51, 1)
     &.coord-odd
       color rgba(#985520, 1)
-.wood.orientation-black
+.board-wood.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#985520, 1)
@@ -117,7 +117,7 @@
       color rgba(#985520, 1)
     &.coord-odd
       color rgba(#d29d51, 1)
-.wood2.orientation-white
+.board-wood2.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#94794c, 1)
@@ -128,7 +128,7 @@
       color rgba(#94794c, 1)
     &.coord-odd
       color rgba(darken(#836839, 20%), 1)
-.wood2.orientation-black
+.board-wood2.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(darken(#836839, 20%), 1)
@@ -139,7 +139,7 @@
       color rgba(darken(#836839, 20%), 1)
     &.coord-odd
       color rgba(#94794c, 1)
-.wood3.orientation-white
+.board-wood3.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#bdb3a7, 1)
@@ -150,7 +150,7 @@
       color rgba(#bdb3a7, 1)
     &.coord-odd
       color rgba(#91683a, 1)
-.wood3.orientation-black
+.board-wood3.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#91683a, 1)
@@ -161,7 +161,7 @@
       color rgba(#91683a, 1)
     &.coord-odd
       color rgba(#bdb3a7, 1)
-.wood4.orientation-white
+.board-wood4.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#caaf7d, 1)
@@ -172,7 +172,7 @@
       color rgba(#caaf7d, 1)
     &.coord-odd
       color rgba(#7b5330, 1)
-.wood4.orientation-black
+.board-wood4.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#7b5330, 1)
@@ -183,7 +183,7 @@
       color rgba(#7b5330, 1)
     &.coord-odd
       color rgba(#caaf7d, 1)
-.maple.orientation-white
+.board-maple.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#ECCCA3, 1)
@@ -194,7 +194,7 @@
       color rgba(#ECCCA3, 1)
     &.coord-odd
       color rgba(#BB7D4A, 1)
-.maple.orientation-black
+.board-maple.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#BB7D4A, 1)
@@ -205,7 +205,7 @@
       color rgba(#BB7D4A, 1)
     &.coord-odd
       color rgba(#ECCCA3, 1)
-.maple2.orientation-white
+.board-maple2.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#e2c89f, 1)
@@ -216,7 +216,7 @@
       color rgba(#e2c89f, 1)
     &.coord-odd
       color rgba(#996633, 1)
-.maple2.orientation-black
+.board-maple2.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#996633, 1)
@@ -227,7 +227,7 @@
       color rgba(#996633, 1)
     &.coord-odd
       color rgba(#e2c89f, 1)
-.leather.orientation-white
+.board-leather.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#d1d1c9, 1)
@@ -238,7 +238,7 @@
       color rgba(#d1d1c9, 1)
     &.coord-odd
       color rgba(#c28e16, 1)
-.leather.orientation-black
+.board-leather.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#c28e16, 1)
@@ -249,7 +249,7 @@
       color rgba(#c28e16, 1)
     &.coord-odd
       color rgba(#d1d1c9, 1)
-.marble.orientation-white
+.board-marble.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#93ab91, 1)
@@ -260,7 +260,7 @@
       color rgba(#93ab91, 1)
     &.coord-odd
       color rgba(#4f644e, 1)
-.marble.orientation-black
+.board-marble.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#4f644e, 1)
@@ -271,7 +271,7 @@
       color rgba(#4f644e, 1)
     &.coord-odd
       color rgba(#93ab91, 1)
-.green-plastic.orientation-white
+.board-green-plastic.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#f2f9bb, 1)
@@ -282,7 +282,7 @@
       color rgba(#f2f9bb, 1)
     &.coord-odd
       color rgba(#59935d, 1)
-.green-plastic.orientation-black
+.board-green-plastic.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#59935d, 1)
@@ -293,7 +293,7 @@
       color rgba(#59935d, 1)
     &.coord-odd
       color rgba(#f2f9bb, 1)
-.olive.orientation-white
+.board-olive.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#b8b19f, 1)
@@ -304,7 +304,7 @@
       color rgba(#b8b19f, 1)
     &.coord-odd
       color rgba(#6d6655, 1)
-.olive.orientation-black
+.board-olive.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#6d6655, 1)
@@ -315,7 +315,7 @@
       color rgba(#6d6655, 1)
     &.coord-odd
       color rgba(#b8b19f, 1)
-.newspaper.orientation-white
+.board-newspaper.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#fff, 1)
@@ -326,7 +326,7 @@
       color rgba(#fff, 1)
     &.coord-odd
       color rgba(#8d8d8d, 1)
-.newspaper.orientation-black
+.board-newspaper.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#8d8d8d, 1)
@@ -337,7 +337,7 @@
       color rgba(#8d8d8d, 1)
     &.coord-odd
       color rgba(#fff, 1)
-.purple-diag.orientation-white
+.board-purple-diag.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#e5daf0, 1)
@@ -348,7 +348,7 @@
       color rgba(#e5daf0, 1)
     &.coord-odd
       color rgba(#957ab0, 1)
-.purple-diag.orientation-black
+.board-purple-diag.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#957ab0, 1)
@@ -359,7 +359,7 @@
       color rgba(#957ab0, 1)
     &.coord-odd
       color rgba(#e5daf0, 1)
-.blue2.orientation-white
+.board-blue2.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#97b2c7, 1)
@@ -370,7 +370,7 @@
       color rgba(#97b2c7, 1)
     &.coord-odd
       color rgba(#546f82, 1)
-.blue2.orientation-black
+.board-blue2.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#546f82, 1)
@@ -381,7 +381,7 @@
       color rgba(#546f82, 1)
     &.coord-odd
       color rgba(#97b2c7, 1)
-.blue3
+.board-blue3
   > li-coords
     color rgba(#c3cdd7, 1)
   &.orientation-white
@@ -398,7 +398,7 @@
     > .ranks > li-coord
       &.coord-even
         color rgba(#487aad, 1)
-.blue-marble.orientation-white
+.board-blue-marble.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#eae6dd, 1)
@@ -409,7 +409,7 @@
       color rgba(#eae6dd, 1)
     &.coord-odd
       color rgba(#7c7f87, 1)
-.blue-marble.orientation-black
+.board-blue-marble.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#7c7f87, 1)
@@ -420,7 +420,7 @@
       color rgba(#7c7f87, 1)
     &.coord-odd
       color rgba(#eae6dd, 1)
-.canvas.orientation-white
+.board-canvas.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#c3cdd7, 1)
@@ -431,7 +431,7 @@
       color rgba(#c3cdd7, 1)
     &.coord-odd
       color rgba(#7687a3, 1)
-.canvas.orientation-black
+.board-canvas.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#7687a3, 1)
@@ -442,7 +442,7 @@
       color rgba(#7687a3, 1)
     &.coord-odd
       color rgba(#c3cdd7, 1)
-.grey.orientation-white
+.board-grey.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#a3a3a3, 1)
@@ -453,7 +453,7 @@
       color rgba(#a3a3a3, 1)
     &.coord-odd
       color rgba(#888888, 1)
-.grey.orientation-black
+.board-grey.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#888888, 1)
@@ -464,7 +464,7 @@
       color rgba(#888888, 1)
     &.coord-odd
       color rgba(#a3a3a3, 1)
-.metal.orientation-white
+.board-metal.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#cecece, 1)
@@ -475,7 +475,7 @@
       color rgba(#cecece, 1)
     &.coord-odd
       color rgba(#727272, 1)
-.metal.orientation-black
+.board-metal.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#727272, 1)
@@ -486,7 +486,7 @@
       color rgba(#727272, 1)
     &.coord-odd
       color rgba(#cecece, 1)
-.pink.orientation-white
+.board-pink.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#e8e9b7, 1)
@@ -497,7 +497,7 @@
       color rgba(#e8e9b7, 1)
     &.coord-odd
       color rgba(#ed7272, 1)
-.pink.orientation-black
+.board-pink.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#ed7272, 1)
@@ -508,9 +508,9 @@
       color rgba(#ed7272, 1)
     &.coord-odd
       color rgba(#e8e9b7, 1)
-.ic > .cg-board
+.board-ic > .cg-board
   background-image url('../../images/board/svg/ic.svg')
-.ic.orientation-white
+.board-ic.orientation-white
   > .files > li-coord
     &.coord-odd
       color rgba(#ececec, 1)
@@ -521,7 +521,7 @@
       color rgba(#ececec, 1)
     &.coord-odd
       color rgba(#c1c18e, 1)
-.ic.orientation-black
+.board-ic.orientation-black
   > .files > li-coord
     &.coord-odd
       color rgba(#c1c18e, 1)
@@ -532,7 +532,7 @@
       color rgba(#c1c18e, 1)
     &.coord-odd
       color rgba(#ececec, 1)
-.horsey
+.board-horsey
   square.selected
     background url('../../images/board/horsey.selected.png')
     background-size cover
