--- a/src/styl/board-content.styl
+++ b/src/styl/board-content.styl
@@ -40,14 +40,15 @@
     margin-left 3vh
 
   > svg
-    overflow: hidden;
-    position: absolute;
+    overflow: visible
+    position: absolute
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
-    opacity: 0.6;
+    svg
+      overflow visible
     > image
       opacity 0.5
 
