Websocket chat fixes

--- a/src/styl/msg.styl
+++ b/src/styl/msg.styl
@@ -155,6 +155,10 @@ flex-center-nowrap()
     flex 0 0 auto
     padding 1em 3vw 1em 3vw
 
+    a
+      .view-container.transp &
+        text-shadow none
+
   group
     flex-column()
     margin .5em 0
@@ -185,6 +189,9 @@ flex-center-nowrap()
     align-self flex-start
     background rgba(#d8d8d8, 70%)
     color textDarkGray
+
+    a
+      color darken(linkBlue, 40%)
 
     em
       color textMediumGray
