--- a/src/styl/msgConvo.styl
+++ b/src/styl/msgConvo.styl
@@ -60,12 +60,12 @@
 
       flex 0 0 auto
       border-top 1px borderColor solid
-      padding 1em 2em
       background headerBgDark
+      padding 1em 1.5em
 
       @media only screen and (min-width 768px)
         border-left 1px borderColor solid
-      
+
       .view-container.light &
         border-color themeBgLightBorder
         background themeBgLightHeader
@@ -82,6 +82,7 @@
       flex-center-nowrap()
 
       flex 1 1 100%
+      margin-bottom: env(safe-area-inset-bottom);
 
       &__text
         padding .8em 1em
@@ -99,8 +100,9 @@
 
       &__submit
         outline 0
-        margin-left 0.5em
-        font-size 40px
+        margin-left 0.2em
+        padding 0
+        font-size 45px
         transition all 150ms
         color textLightGray
 
