WIP on completing coordinates

--- a/src/styl/button.styl
+++ b/src/styl/button.styl
@@ -26,6 +26,10 @@ button, .li-button
   white-space nowrap
   border-radius 3px
   box-shadow 0 4px 10px 0px rgba(0,0,0,0.225)
+  &.fat
+    font-size 1.3em
+  &.wrap
+    white-space normal
   &.cancel
     background #c33
 
