Save coordinate score and compute average

--- a/src/styl/coordinates.styl
+++ b/src/styl/coordinates.styl
@@ -55,8 +55,11 @@
 
 .training-table.coord-trainer__table
   padding 0
-  justify-content space-around
+  justify-content center
   align-items center
+
+.coord-trainer__average
+  margin-bottom 1.5em
 
 .coord-trainer__table .explanation li
   list-style: outside disc
