--- a/src/styl/board-content.styl
+++ b/src/styl/board-content.styl
@@ -135,6 +135,7 @@
     display flex
     flex-flow row nowrap
     justify-content space-between
+    align-items center
   .mini_board__user
     > .rating
       margin-left 0.5em
